sort.basic.comb.AlgCombSort11.scala.error
Compilation error:
AlgCombSort11:15: error: Unmatched closing brace '}' ignored here
    }
    ^